tests/neg/i25644.check
-- Error: tests/neg/i25644.scala:9:42 ----------------------------------------------------------------------------------
9 |  update def update(i: Int, x: T): Unit = elems(i) = x // error
  |                                          ^^^^^
  |                                          Cannot call update method update of Arr.this.elems
  |                                          since its capture set {Arr.this.elems} is read-only.
